--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;">&#9733;</span> NorthStarBet</a>
+	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/northstar.png" width="200"></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
