--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
+    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_2.jpg)">
 			<div class="container">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
+						<h2>BET WITH THE BEST!</h2>
 						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">JOIN NOW!</a></p>
 					</div>
 				</div>
 			</div>
