--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>NorthStarBet</title>
+    <title>WagerNowBet</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -30,7 +30,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/logo.png" width="200"></a>
+	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.png" width="200"></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -72,7 +72,7 @@
     			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
-		          	<h1 class="big">NorthStar</h1>
+		          	<h1 class="big">WagerNow</h1>
 		            <h2 class="mb-4">Live Betting</h2>
 		            <div style="background-color:rgba(0,0,0,0.25); color:#fff; padding:30px;">
 						<h2 style="font-size:22px; margin-bottom:15px;">🔥 The Hottest Betting Trend Right Now! 🔥</h2>
@@ -173,7 +173,7 @@
 					<span class="icon-paper-plane"></span>
 				  </div>
 				  <h3 class="mb-4">Email Address</h3>
-				  <p><a href="mailto:info@yoursite.com">info@northstarbet.com</a></p>
+				  <p><a href="mailto:info@yoursite.com">info@WagerNowbet.com</a></p>
 				</div>
 			  </div>
 			
@@ -349,12 +349,12 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/logo.png" width="200"></a>
+              <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.png" width="200"></a>
 				<h2 class="ftco-heading-2">Bet with the best!</h2>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="https://x.com/NorthStar_Bet"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://x.com/WagerNow_Bet"><span class="icon-twitter"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="https://www.instagram.com/northstar.bet/" target="_blank"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/WagerNow.bet/" target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -374,7 +374,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1-855-296-9171</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@northstarbet.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@WagerNowbet.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
