--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.png" width="200"></a>
+	      <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.svg" width="200"></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -349,7 +349,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.png" width="200"></a>
+              <a class="navbar-brand" href="index.html"><span style="color: #3877b6;"><img src="images/wagernow_logo.svg" width="200"></a>
 				<h2 class="ftco-heading-2">Bet with the best!</h2>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://x.com/WagerNow_Bet"><span class="icon-twitter"></span></a></li>
