--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					<span class="icon-paper-plane"></span>
 				  </div>
 				  <h3 class="mb-4">Email Address</h3>
-				  <p><a href="mailto:info@yoursite.com">info@WagerNowbet.com</a></p>
+				  <p><a href="mailto:info@wagernow.ag">info@wagernow.ag</a></p>
 				</div>
 			  </div>
 			
@@ -374,7 +374,7 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1-855-296-9171</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@WagerNowbet.com</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@wagernow.ag</span></a></li>
 	              </ul>
 	            </div>
             </div>
